--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: gyro publish
         env:
-          GYRO_ACCESS_TOKEN: ${{ secrets.GYRO_ACCESS_TOKE }}
+          GYRO_ACCESS_TOKEN: ${{ secrets.GYRO_ACCESS_TOKEN }}
